fix: :wheelchair: No overflow at 88px!
today i did the impossible

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,3 +9,9 @@ code,
 pre {
 	font-family: monospace, monospace; /* [sic], https://seirdy.one/posts/2020/11/23/website-best-practices#monospace-handling */
 }
+
+@media (max-width: 230px) {
+	body {
+		padding: 0;
+	}
+}
